cmake_minimum_required( VERSION 3.24 )
enable_language(CXX)

project(hello_slam)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_TYPE Debug)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/libs)

find_package(glog REQUIRED)
find_package(absl REQUIRED)
find_package(gflags REQUIRED)
find_package(Sophus REQUIRED)
find_package(OpenCV REQUIRED)
find_package(Pangolin REQUIRED)
include_directories("/usr/include/eigen3")
include_directories(${Pangolin_INCLUDE_DIRS})
include_directories(${Sophus_INCLUDE_DIRS})
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${absl_INCLUDE_DIRS})

add_executable(use_geometry use_geometry.cpp)
add_executable(coor_trans coordinate_transform.cpp)
add_executable(trajectory visualize_trajectory.cpp)
add_executable(use_sophus use_sophus.cpp)
add_executable(use_opencv use_opencv.cpp pangolin_eigen_cv_head.h)
add_executable(use_rgbd_pc use_rgbd_pc.cpp pangolin_eigen_cv_head.h)

target_link_libraries(trajectory ${Pangolin_LIBRARIES})
target_link_libraries(trajectory glog::glog)
target_link_libraries(trajectory gflags)
target_link_libraries(use_sophus ${Sophus_LIBRARIES})
target_link_libraries(use_opencv ${Pangolin_LIBRARIES} ${OpenCV_LIBS} absl::str_format glog::glog gflags)
target_link_libraries(use_rgbd_pc ${Pangolin_LIBRARIES} ${OpenCV_LIBS} absl::str_format glog::glog gflags)
